<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minions</string>
    <string name="splash">Splash Screen</string>
    <string name="menu">Main Menu Screen</string>
    <string name="game">Game Screen</string>
    <string name="options">Option Screen</string>
    <string name="help">Help Screen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_minion_game">MinionGameActivity</string>
    <string name="title_activity_minion_option">MinionOptionActivity</string>
    <string name="title_activity_minion_help">MinionHelpActivity</string>
    <string name="title_activity_minion_menu">MinionMenuActivity</string>
    <string name="title_activity_minion">MinionActivity</string>

    <string name="play_game">Play Game</string>
    <string name="Options_menu">Options</string>
    <string name="help_menu">Help</string>

    <string name="row_num">Enter number of rows</string>
    <string name="col_num">Enter number of columns</string>
    <string name="btn_back_home">Done !</string>
    <string name="welcome_title">Minions</string>
    <string name="authors"><![CDATA[By: Arsalan Noroozzadeh & Paul Madeya]]></string>
    <string-array name="sizeOfBoard">

        <item>3x4</item>
        <item>4x6</item>
        <item>8x12</item>
    </string-array>

    <string-array name="minNum">
        <item>6</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>


    <string name="board_size">Board Size</string>
    <string name="minion_num">Number of Minions</string>

</resources>
