<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="project3.cmpt276.ca.minions.MinionMenuActivity"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:id="@+id/btnPlayGame"
        android:layout_above="@+id/btnOption"
        android:layout_alignStart="@+id/btnOption" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Options_menu"
        android:id="@+id/btnOption"
        android:layout_marginStart="48dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_menu"
        android:id="@+id/btnHelp"
        android:layout_below="@+id/btnOption"
        android:layout_alignStart="@+id/btnOption" />


</RelativeLayout>
