<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="project3.cmpt276.ca.minions.MinionOptionActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board_size"
        android:id="@+id/rowText"
        android:textSize="25dp"
        android:layout_below="@+id/optionsText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minion_num"
        android:id="@+id/colText"
        android:textSize="25dp"
        android:layout_below="@+id/rowText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Options_menu"
        android:id="@+id/optionsText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50dp"
        android:textColor="#000"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_home"
        android:id="@+id/btnBackHome"
        android:layout_below="@+id/colText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/board_spinner"
        android:layout_alignBottom="@+id/rowText"
        android:layout_alignTop="@+id/rowText"
        android:layout_toEndOf="@+id/rowText"
        android:layout_alignStart="@+id/minions_num" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minions_num"
        android:layout_above="@+id/btnBackHome"
        android:layout_alignTop="@+id/colText"
        android:layout_toEndOf="@+id/rowText"
        android:layout_alignStart="@+id/optionsText" />


</RelativeLayout>
